# ShellModel

./: .gitignore  LICENSE  ShellModel.cabal
src/: FuncTypes.hs  XYTable.hs
