name:                ShellModel
version:             0.1.0.0
synopsis:            Haskell solver for the radial Schrödinger equation
description:         Please see README.md
homepage:            https://github.com/arekfu/ShellModel#readme
license:             BSD3
license-file:        LICENSE
author:              Davide Mancusi
maintainer:          arekfu@yahoo.it
copyright:           Copyright: (c) 2016 Davide Mancusi
category:            Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     XYTable
                     , FuncTypes
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

executable ShellModel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ShellModel
  default-language:    Haskell2010

test-suite ShellModel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ShellModel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arekfu/ShellModel
